Blender 2.70 crash when I link an asset (object created in blender 2.69) #39318

Closed
opened 2014-03-21 11:59:59 +01:00 by Olivier FAVRE · 15 comments

System Information
Windows 7 64bits, 12 Go RAM, GTX590

Blender Version
Broken 2.70 Hash 19e627c
Worked 2.69

Short description of error
Blender 2.70 crash when I link an asset (object created in blender 2.69)

Exact steps for others to reproduce the error
I actually work on an architectural project. I created 2 files with blender 2.69. The first (Composants.blend) contains all my assets for my 2nd file (Maison.blend) where I link and proxy all my assets.
Now, when I load any asset (object) in blender 2.70, it crash.
blender_bugtracker.zip

**System Information** Windows 7 64bits, 12 Go RAM, GTX590 **Blender Version** Broken 2.70 Hash 19e627c Worked 2.69 **Short description of error** Blender 2.70 crash when I link an asset (object created in blender 2.69) **Exact steps for others to reproduce the error** I actually work on an architectural project. I created 2 files with blender 2.69. The first (Composants.blend) contains all my assets for my 2nd file (Maison.blend) where I link and proxy all my assets. Now, when I load any asset (object) in blender 2.70, it crash. [blender_bugtracker.zip ](http://olidou.com/data/blender_bugtracker.zip)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TazTako

Added subscriber: @TazTako

Added subscriber: @Sergey

Added subscriber: @Sergey

I'm not sure, what are the steps reproducing the crash using the file you've uploaded?

I'm not sure, what are the steps reproducing the crash using the file you've uploaded?
Author
  1. Open Blender 2,70.
  2. File / Open "Maison.blend" (important to open it before linking new asset)
  3. File / Link "Composants.blend" / Object / Bac Acier 3000x1050x45mm
  4. Blender crash.

Note that blender don't crash if I link an object in a new .blend
The 2 files (Maison.blend & Composants.blend) were created in blender 2.69

1. Open Blender 2,70. 2. File / Open "Maison.blend" (important to open it before linking new asset) 3. File / Link "Composants.blend" / Object / Bac Acier 3000x1050x45mm 4. Blender crash. Note that blender don't crash if I link an object in a new .blend The 2 files (Maison.blend & Composants.blend) were created in blender 2.69
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

Can't reproduce following these steps (arch linux 64bit, GTX 660). Memory usage and face count looks reasonable, don't think that's the issue.

Can't reproduce following these steps (arch linux 64bit, GTX 660). Memory usage and face count looks reasonable, don't think that's the issue.
Author

I think the problem could be in my hardware (GTX 590 is a bi-gpu card).
I can load /link/proxy the assets on my 2nd computer, a laptop Compaq Presario (Win 7 64bits, AMD C-50 1Ghz, 3Go RAM, Radeon HD 6250) without any problem.

I think the problem could be in my hardware (GTX 590 is a bi-gpu card). I can load /link/proxy the assets on my 2nd computer, a laptop Compaq Presario (Win 7 64bits, AMD C-50 1Ghz, 3Go RAM, Radeon HD 6250) without any problem.
Author

If anyone else has a GTX590, maybe he could reproduce this bug ?

If anyone else has a GTX590, maybe he could reproduce this bug ?
Author

Blender also crash on my wife's "pc-gamer" computer (GTX 570), so bi-gpu won't be the cause.

Blender also crash on my wife's "pc-gamer" computer (GTX 570), so bi-gpu won't be the cause.
Author

Installed last drivers from nVidia (335.23) and put "Factory Settings" and blender always crash.

Installed last drivers from nVidia (335.23) and put "Factory Settings" and blender always crash.
Sergey Sharybin self-assigned this 2014-03-24 06:51:05 +01:00

This issue was referenced by blender/blender-addons-contrib@f48828b64e

This issue was referenced by blender/blender-addons-contrib@f48828b64e480b6f16c21f660d3d6212648d56d7

This issue was referenced by f48828b64e

This issue was referenced by f48828b64e480b6f16c21f660d3d6212648d56d7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f48828b64e.

Closed by commit f48828b64e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39318
No description provided.